Fix missing color

--- a/variables/_colors.pcss
+++ b/variables/_colors.pcss
@@ -161,10 +161,4 @@
 	--color-box-shadow-secondary: var(--tec-color-box-shadow-secondary);
 	--color-scroll-track: var(--tec-color-scroll-track);
 	--color-scroll-bar: var(--tec-color-scroll-bar);
-
-	/* -----------------------------------------------------------------------------
-	 * Colors - Theme-specific
-	 * ----------------------------------------------------------------------------- */
-
-	--color-twentyseventeen-dark-background: var(--tec-color-twentyseventeen-dark-background);
 }
